src/objects/Financial_Advisor__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>As_of_Date__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <label>Financial Advisor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Advisors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>